--- a/package.json
+++ b/package.json
@@ -22,11 +22,18 @@
     "gulp-babel": "^6.1.2",
     "gulp-mocha": "^2.2.0",
     "gulp-util": "^3.0.7",
-    "mocha": "^2.5.3"
+    "mocha": "^2.5.3",
+    "superagent": "^2.0.0"
   },
   "babel": {
     "presets": [
       "es2015"
     ]
+  },
+  "dependencies": {
+    "express": "^4.14.0",
+    "sequelize": "^3.23.3",
+    "sqlite3": "^3.1.4",
+    "wagner-core": "^0.2.0"
   }
 }
