--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     ]
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "lodash": "^4.13.1",
     "sequelize": "^3.23.3",
     "sqlite3": "^3.1.4",
     "wagner-core": "^0.2.0"
