--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "mocha": "^2.5.3",
     "superagent": "^2.0.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/affanshahid/giki-evapp-server.git"
+  },
   "babel": {
     "presets": [
       "es2015"
@@ -35,7 +39,6 @@
     "lodash": "^4.13.1",
     "multer": "^1.1.0",
     "sequelize": "^3.23.3",
-    "sqlite3": "^3.1.4",
-    "wagner-core": "^0.2.0"
+    "sqlite3": "^3.1.4"
   }
 }
