--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "gulp test",
     "build": "gulp build",
     "start": "node build",
-    "serve": "gulp build && node build"
+    "serve": "gulp build && node build",
+    "watch": "gulp watch"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
     "eslint": "^2.13.0",
+    "glob": "^7.0.5",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-mocha": "^2.2.0",
