--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "lodash": "^4.13.1",
     "multer": "^1.1.0",
     "multer-storage-cloudinary": "^1.2.1",
+    "pg": "^6.0.1",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^3.23.3",
     "sqlite3": "^3.1.4"
   }
