--- a/package.json
+++ b/package.json
@@ -21,10 +21,7 @@
     "chai": "^3.5.0",
     "eslint": "^2.13.0",
     "glob": "^7.0.5",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
     "gulp-mocha": "^2.2.0",
-    "gulp-util": "^3.0.7",
     "mocha": "^2.5.3",
     "superagent": "^2.0.0"
   },
@@ -46,6 +43,8 @@
     "pg": "^6.0.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.23.3",
-    "sqlite3": "^3.1.4"
+    "sqlite3": "^3.1.4",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
   }
 }
