--- a/package.json
+++ b/package.json
@@ -45,6 +45,6 @@
     "sequelize": "^3.23.3",
     "sqlite3": "^3.1.4",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
+    "gulp-babel": "^6.1.2"
   }
 }
