--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "main": "build/index.js",
   "scripts": {
     "test": "gulp test",
+    "test:client": "gulp test:client",
+    "test:server": "gulp test:server",
     "build": "gulp build",
-    "start": "node build",
+    "build:client": "gulp build:client",
+    "build:server": "gulp build:server",
+    "serve:server": "npm run build:server && npm start",
+    "serve:client": "webpack-dev-server --port 3000 --config \"client/webpack.development.config.babel.js\"",
     "serve": "npm run build && npm start",
-    "watch": "gulp watch",
+    "start": "node build",
     "postinstall": "npm run build"
   },
   "keywords": [],
@@ -20,7 +25,9 @@
     "eslint": "^2.13.0",
     "glob": "^7.0.5",
     "mocha": "^2.5.3",
-    "superagent": "^2.0.0"
+    "react-hot-loader": "^1.3.0",
+    "superagent": "^2.0.0",
+    "webpack-dev-server": "^1.14.1"
   },
   "repository": {
     "type": "git",
@@ -28,23 +35,33 @@
   },
   "babel": {
     "presets": [
-      "es2015"
+      "es2015",
+      "react"
     ]
   },
   "dependencies": {
+    "autoprefixer-loader": "^3.2.0",
+    "babel-core": "^6.9.1",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "cloudinary": "^1.4.1",
+    "css-loader": "^0.23.1",
     "express": "^4.14.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-mocha": "^2.2.0",
+    "gulp-util": "^3.0.7",
     "lodash": "^4.13.1",
     "multer": "^1.1.0",
     "multer-storage-cloudinary": "^1.2.1",
     "pg": "^6.0.1",
-    "babel-core": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
-    "gulp-mocha": "^2.2.0",
     "pg-hstore": "^2.3.2",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
     "sequelize": "^3.23.3",
     "sqlite3": "^3.1.4",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2"
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.1"
   }
 }
