--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
   "devDependencies": {
     "babel-cli": "^6.10.1",
     "chai": "^3.5.0",
+    "chai-immutable": "^1.6.0",
+    "enzyme": "^2.3.0",
     "eslint": "^2.13.0",
     "glob": "^7.0.5",
+    "jsdom": "^9.3.0",
     "mocha": "^2.5.3",
+    "react-addons-test-utils": "^15.1.0",
     "react-hot-loader": "^1.3.0",
     "superagent": "^2.0.0",
     "webpack-dev-server": "^1.14.1"
@@ -52,6 +56,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-mocha": "^2.2.0",
     "gulp-util": "^3.0.7",
+    "immutable": "^3.8.1",
     "lodash": "^4.13.1",
     "multer": "^1.1.0",
     "multer-storage-cloudinary": "^1.2.1",
