--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "multer-storage-cloudinary": "^1.2.1",
     "pg": "^6.0.1",
     "pg-hstore": "^2.3.2",
-    "react": "^15.1.0",
+    "react": "^15.2.0",
+    "react-addons-pure-render-mixin": "^15.2.0",
     "react-dom": "^15.1.0",
     "sequelize": "^3.23.3",
     "sqlite3": "^3.1.4",
