--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "classnames": "^2.2.5",
     "cloudinary": "^1.4.1",
     "css-loader": "^0.23.1",
     "express": "^4.14.0",
