--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     ]
   },
   "dependencies": {
-    "autoprefixer-loader": "^3.2.0",
+    "autoprefixer": "^6.3.7",
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
@@ -63,9 +63,11 @@
     "multer-storage-cloudinary": "^1.2.1",
     "pg": "^6.0.1",
     "pg-hstore": "^2.3.2",
+    "postcss-loader": "^0.9.1",
     "react": "^15.2.0",
     "react-addons-pure-render-mixin": "^15.2.0",
     "react-dom": "^15.1.0",
+    "react-router": "^2.5.2",
     "react-slick": "^0.12.2",
     "sequelize": "^3.23.3",
     "sqlite3": "^3.1.4",
