--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "gulp-util": "^3.0.7",
     "immutable": "^3.8.1",
     "lodash": "^4.13.1",
+    "moment": "^2.15.0",
     "multer": "^1.1.0",
     "multer-storage-cloudinary": "^1.2.1",
     "pg": "^6.0.1",
