--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "autoprefixer": "^6.3.7",
+    "axios": "^0.14.0",
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
@@ -68,8 +69,12 @@
     "react": "^15.2.0",
     "react-addons-pure-render-mixin": "^15.2.0",
     "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
     "react-router": "^2.5.2",
     "react-slick": "^0.12.2",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.6.1",
+    "redux-promise": "^0.5.3",
     "sequelize": "^3.23.3",
     "sqlite3": "^3.1.4",
     "style-loader": "^0.13.1",
