--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "react-slick": "^0.12.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.6.1",
-    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.1.0",
     "sequelize": "^3.23.3",
     "sqlite3": "^3.1.4",
     "style-loader": "^0.13.1",
