--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:client": "gulp build:client",
     "build:server": "gulp build:server",
     "serve:server": "npm run build:server && npm start",
-    "serve:client": "webpack-dev-server --port 8001 --config \"client/webpack.development.config.babel.js\"",
+    "serve:client": "webpack-dev-server --port 8002 --config \"client/webpack.development.config.babel.js\"",
     "serve": "npm run build && npm start",
     "start": "node build",
     "postinstall": "npm run build"
@@ -25,9 +25,11 @@
     "chai-immutable": "^1.6.0",
     "enzyme": "^2.3.0",
     "eslint": "^2.13.0",
+    "eslint-plugin-react": "^6.2.2",
     "glob": "^7.0.5",
     "jsdom": "^9.3.0",
     "mocha": "^2.5.3",
+    "morgan": "^1.7.0",
     "react-addons-test-utils": "^15.1.0",
     "react-hot-loader": "^1.3.0",
     "superagent": "^2.0.0",
